# cawd

./: .env.example  CLAUDE.md  Cargo.toml  Makefile  README.md  cliff.toml  clippy.toml  deny.toml  typos.toml
.github/workflows/: bench.yml  compat.yml  lint.yml  pr-title.yml  stale.yml  test.yml
cawd/: Cargo.toml
cawd/src/: action.rs  annotation.rs  app.rs  main.rs  tui.rs
cawd/src/components/: code_viewer.rs  file_tree.rs  git_status.rs  help_bar.rs  mod.rs  notion.rs  review.rs  search_modal.rs
cawd/src/utils/: mod.rs
fuzz/: Cargo.toml
src/: action.rs  annotation.rs  app.rs  main.rs  tui.rs
src/components/: code_viewer.rs  file_tree.rs  git_status.rs  help_bar.rs  mod.rs  review.rs  search.rs  search_modal.rs
