[package]
name = "cawd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code Aware Workspace Display - Terminal file explorer with syntax highlighting"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = { version = "0.29", features = ["event-stream"] }
devicons = "0.6"
ratatui = "0.30"
syntect = "5.2"
two-face = "0.5"

[lints]
workspace = true
